kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
  name: debug-shell
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: debug.localtest.me
    http:
      paths:
      - backend:
          service:
            name: debug-shell
            port:
              number: 80
        path: /
        pathType: Prefix
